# main.go
@@ -237,6 +237,8 @@ func main() {
 		v1.GET("/dispatch/:caseId/units", handler.GetUnit)
 		v1.POST("/dispatch/event", handler.UpdateCurrentStage)
 
+		v1.GET("/dispatch/:caseId/SOP/unit/:unitId", handler.GetUnitSOP)
+
 		v1.GET("/audit_log", handler.GetAuditlog)
 		v1.GET("/audit_log/:username", handler.GetAuditlogByUsername)
 
@@ -248,6 +250,7 @@ func main() {
 
 		v1.GET("/devices", handler.GetDeviceIoT)
 		v1.GET("/devices/:id", handler.GetDeviceIoTById)
+
 	}
 
 	minimal := router.Group("/api/minimal")
